--- a/trunk/app/styles/main.css
+++ b/trunk/app/styles/main.css
@@ -128,10 +128,7 @@ height: 868px;
 margin: 0 0 0 375px;
 padding: 3px 6px;
 border-bottom: 3px solid #45AFD1;
-}
-
-#address input {
-width: 98%;
+font-size: 10px;
 }
 
 iframe {
