Bevel border images

--- a/app/go2me/templates/mapped.html
+++ b/app/go2me/templates/mapped.html
@@ -125,6 +125,7 @@ window.onclick = Click;
 {% block body %}
 <div id="info">
 	<div id="info-status">
+		<div class="border-h"><div class="boarder-ul"></div><div class="border-ur"></div></div>
 		<p class="stats-header">
 			<a style="float:right;padding-top:2px;padding-right:2px;" target="_top" href="{{map.Href}}" title="Close Frame"><img class="x" src="/images/x.png"/></a>
 			Go2.me
@@ -190,7 +191,6 @@ window.onclick = Click;
 		<a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo-small" src="/images/logo-small.png"></a>
 	</div>
 	
-	</div> <!-- info-body -->
 </div> <!-- sidebar -->
 
 <div id="address">
