--- a/app/go2me/templates/user.html
+++ b/app/go2me/templates/user.html
@@ -6,7 +6,7 @@
 <div class="page">
 <div class="head">
 	<a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo" src="/images/logo.png"></a>
-	<a href="/user/{{usernamePage}}/picture_full"><img class="profile" src="/user/{{usernamePage}}/picture_med"></a>
+	<a href="/user/{{usernamePage}}/picture_full"><img class="profile-med" src="/user/{{usernamePage}}/picture_med"></a>
 	<h1 style="padding-top: 40px;">
 		{% if profilePage.urlHome %}
 			<a href="{{profilePage.urlHome|escape}}">{{usernamePage}}</a>'s activity
