--- a/trunk/app/go2me/templates/error.html
+++ b/trunk/app/go2me/templates/error.html
@@ -1,11 +1,16 @@
 {% extends "master.html" %}
 {% block subTitle %}Error - {{ message|escape }}{% endblock %}
 {% block body %}
-<a target="_top" href="/"><img title="{{site_name}}" class="logo" src="/images/logo.png"></a>
-<h3 style="padding-top: 30px;">{{status_major}}: {{ message|escape }}.</h3>
+<div style="text-align:center;">
+	<a href="/"><img title="{{site_name}}" src="/images/logo.png"></a>
+	<p style="font-size: 24px;" class="error">
+		{{status_major}}: {{ message|escape }}.
+	</p>
+</div>
+<div style="clear:both;"></div>
 {% ifequal status "Fail/NotFound" %} 
 <style type="text/css">
-  #goog-wm { }
+  #goog-wm { text-align: center;}
   #goog-wm h3.closest-match { }
   #goog-wm h3.closest-match a { }
   #goog-wm h3.other-things { }
